Fix #34679: cycles image texture alpha fringes. New rule is now that color output will not give straight RGB values if the alpha output is used, so that mixing with a transparent BSDF gives the correct result.